# pypilot-data-model

./: CMakeLists.txt  README.md  library.properties
.github/workflows/: arduino.yml  linux.yml
docs/: original-value-audit.md
examples/arduino/DataModelExample/: DataModelExample.ino
examples/linux/: print_model.cpp
src/: pypilot_data_model.hpp
src/pypilot_data_model/: autopilot.hpp  boatimu.hpp  data_dictionary.hpp  data_model.hpp  field_access.hpp  field_id.hpp  field_meta.hpp  field_table.hpp  imu_calibration.hpp  mapping.hpp  navigation.hpp  optional_field_table.hpp  pypilot_names.hpp  pypilot_original_aliases.hpp  pypilot_original_names.hpp  rudder.hpp  runtime_publication.hpp  servo_telemetry.hpp  water.hpp
src/pypilot_data_model/detail/: pypilot_original_aliases.hpp
src/ship_data_model/: autopilot.hpp  autopilot_data.hpp  basic_data2.hpp  basic_data3.hpp  boatimu.hpp  core.hpp  data_dictionary.hpp  data_model.hpp  data_model_mapping.hpp  field_access.hpp  field_def.hpp  field_id.hpp  field_meta.hpp  field_table.hpp  imu_calibration.hpp  mapping.hpp  navigation.hpp  optional_field_table.hpp  pilot_io.hpp  pilots.hpp  profile.hpp  pypilot_compat_aliases.hpp  pypilot_names.hpp  rudder.hpp  runtime_publication.hpp  server.hpp  servo.hpp  servo_telemetry.hpp  ship_imu_data.hpp  status.hpp  steering.hpp  steering_data.hpp  tack.hpp  tmp_basic.hpp  tmp_include.hpp  tmp_term2.hpp  tmp_term4.hpp  water.hpp  wind.hpp  wind_n_sea.hpp  (+1 more)
support/ship_data_model_bridge/: autopilot.hpp  boatimu.hpp  core.hpp  data_dictionary.hpp  data_model.hpp  field_access.hpp  field_id.hpp  field_meta.hpp  field_table.hpp  imu_calibration.hpp  mapping.hpp  navigation.hpp  optional_field_table.hpp  pilot_io.hpp  pilots.hpp  profile.hpp  pypilot_compat_aliases.hpp  pypilot_names.hpp  rudder.hpp  runtime_publication.hpp  server.hpp  servo.hpp  servo_telemetry.hpp  status.hpp  tack.hpp  water.hpp  wind.hpp
support/ship_data_model_raw/: core.hpp  data_dictionary.hpp  field_access.hpp  field_table.hpp  navigation.hpp  optional_field_table.hpp  pilot_io.hpp  pilots.hpp  profile.hpp  pypilot_compat_aliases.hpp  pypilot_names.hpp  runtime_publication.hpp  server.hpp  servo.hpp  status.hpp  tack.hpp  water.hpp  wind.hpp
tests/: test_compat_name_coverage.cpp  test_extended_model.cpp  test_field_map.cpp  test_model.cpp  test_original_name_coverage.cpp
tests/support/: pypilot_compat_name_list.hpp  pypilot_original_names.hpp
